# content_management_system

./: .gitignore  README.md
Name/: create_db.py  manage.py  pyproject.toml
Name/CRM/: forms.py  models.py  urls.py  views.py
Name/CRM/migrations/: 0001_initial.py
Name/Name/: asgi.py  settings.py  urls.py  wsgi.py
Name/templates/: add_record.html  base.html  home.html  navbar.html  record.html  register.html  update_record.html
